Implement byte cost and `minimum_storage_deposit` for `Output`s (#1095)
* :tada: Stripped down implementation fo byte cost

* Add `ByteCostConfig`

* Better documentation

* Hook up API to byte cost

* Fix default values

* Move and rename `ByteCostConfigBuilder`

* Address comments

* Rename fields to better reflect tip

* Update bee-message/tests/byte_cost.rs

Co-authored-by: Adam Gleave <adamg108@hotmail.co.uk>

* Incorporate `offset`

* Small fixes

* `byte_cost.final.final.pdf`

* Update copyright dates `byte_cost.final.final.v2.pdf`

Co-authored-by: Thibault Martinez <thibault.martinez.30@gmail.com>

* Small changes

Co-authored-by: Adam Gleave <adamg108@hotmail.co.uk>
Co-authored-by: Thibault Martinez <thibault.martinez.30@gmail.com>

--- a/bee-message/Cargo.toml
+++ b/bee-message/Cargo.toml
@@ -36,7 +36,7 @@ serde-big-array = { version = "0.3.2", default-features = false, features = [ "c
 thiserror = { version = "1.0.30", default-features = false }
 
 [dev-dependencies]
-bee-test = { path = "../bee-test", default-features = false }
+bee-test = { version = "0.1.0", path = "../bee-test", default-features = false }
 
 num_cpus = { version = "1.13.0", default-features = false }
 
