--- a/bee-node/config.stardust-testnet.toml
+++ b/bee-node/config.stardust-testnet.toml
@@ -69,6 +69,11 @@ end         = 0
 status_interval       = 10
 milestone_sync_count  = 200
 
+[protocol.byte_cost]
+v_byte_cost = 500
+v_byte_factor_key = 10
+v_byte_factor_data = 1
+
 [rest_api]
 bind_address          = "/ip4/0.0.0.0/tcp/14265"
 feature_proof_of_work = true
