--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,21 +3,19 @@ name: CI
 on:
   push:
     branches:
-      - dev
       - mainnet
-      - mainnet-develop
+      - 'mainnet-develop*'
       - shimmer
-      - shimmer-develop
+      - 'shimmer-develop*'
     paths-ignore:
       - 'documentation/**'
       - '**.md'
   pull_request:
     branches:
-      - dev
       - mainnet
-      - mainnet-develop
+      - 'mainnet-develop*'
       - shimmer
-      - shimmer-develop
+      - 'shimmer-develop*'
     paths-ignore:
       - 'documentation/**'
       - '**.md'
