--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -205,6 +205,7 @@ jobs:
 
   clippy:
     needs: format
+    if: ${{ (github.event_name == 'pull_request') && matrix.experimental }}
     name: Clippy ${{ format('({0}){1}', matrix.rust, matrix.experimental && ' - 🦜' || '') }}
     runs-on: ubuntu-latest
     continue-on-error: ${{ matrix.experimental }}
