--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -122,7 +122,7 @@ jobs:
           args: --workspace --doc --all-features --release
 
   no_std:
-    name: `no_std` ${{ format('({0},{1}){2}', matrix.rust, matrix.crates, matrix.experimental && ' - 🦜' || '') }}
+    name: Check [no_std] ${{ format('({0},{1}){2}', matrix.rust, matrix.crates, matrix.experimental && ' - 🦜' || '') }}
     needs: build-and-test
     runs-on: ubuntu-latest
     continue-on-error: ${{ matrix.experimental }}
@@ -391,7 +391,7 @@ jobs:
           args: --no-deps --document-private-items
 
   missing-files:
-    name: missing files
+    name: Missing Files
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
