--- a/bee-network/bee-gossip/Cargo.toml
+++ b/bee-network/bee-gossip/Cargo.toml
@@ -26,10 +26,10 @@ full = [
   "libp2p/identify",
   "libp2p/mplex",
   "libp2p/noise",
+  "libp2p/ping",
   "libp2p/tcp-tokio",
   "libp2p/yamux",
   "log",
-  "once_cell",
   "rand",
   "serde",
   "thiserror",
@@ -43,10 +43,11 @@ bee-runtime = { version = "0.1.1-alpha", path = "../../bee-runtime", default-fea
 async-trait = { version = "0.1.51", default-features = false, optional = true }
 futures = { version = "0.3.17", default-features = false, optional = true }
 hashbrown = { version = "0.11.2", default-features = false, features = [ "ahash", "inline-more" ] }
-libp2p = { version = "0.39.1", default-features = false, optional = true }
-libp2p-core = { version = "0.29.0", default-features = false }
+libp2p = { version = "0.41.0", default-features = false, optional = true }
+libp2p-core = { version = "0.30.2", default-features = false }
 log = { version = "0.4.14", default-features = false, optional = true }
-once_cell = { version = "1.8.0", default-features = false, optional = true }
+parking_lot = "0.12.0"
+priority-queue = "1.2.1"
 rand = { version = "0.8.4", default-features = false, optional = true }
 serde = { version = "1.0.130", default-features = false, features = [ "derive" ], optional = true }
 thiserror = { version = "1.0.30", default-features = false, optional = true }
@@ -58,7 +59,3 @@ fern = { version = "0.6.0", default-features = false }
 hex = { version = "0.4.3", default-features = false, features = [ "alloc" ] }
 serial_test = { version = "0.5.1", default-features = false }
 tokio = { version = "1.12.0", default-features = false, features = [ "io-std", "io-util", "macros", "rt", "rt-multi-thread", "signal", "time" ] }
-
-[[example]]
-name = "chat"
-required-features = [ "full" ]
