--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,29 +20,27 @@ on:
       - 'documentation/**'
       - '**.md'
 
+concurrency: 
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   build-and-test:
-    name: ${{ format('{0}Build & Test ({1}, {2})', matrix.experimental && '🦜 ' || '', matrix.os, matrix.rust) }}
     runs-on: ${{ matrix.os }}
     continue-on-error: ${{ matrix.experimental }}
     strategy:
       matrix:
-        rust: [stable]
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        rust: [stable, beta]
+        # Switch back to `windows-latest` when it reliably compiles again.
+        os: [ubuntu-latest, macos-latest, windows-2019]
         experimental: [false]
         include:
-          - rust: beta
-            os: ubuntu-latest
-            experimental: true
-          - rust: beta
-            os: macos-latest
-            experimental: true
-          - rust: beta
-            os: windows-latest
-            experimental: true
             # The following ensures that workflows relying on `nightly` don't break.
           - rust: nightly
             os: ubuntu-latest
+            experimental: true
+          - rust: stable
+            os: windows-latest
             experimental: true
 
     steps:
@@ -50,14 +48,14 @@ jobs:
 
       - name: Install LLVM and Clang (Windows)
         uses: KyleMayes/install-llvm-action@32c4866ebb71e0949e8833eb49beeebed48532bd
-        if: matrix.os == 'windows-latest'
+        if: contains(matrix.os, 'windows')
         with:
           version: "11.0"
           directory: ${{ runner.temp }}/llvm
 
       - name: Set LIBCLANG_PATH (Windows)
         run: echo "LIBCLANG_PATH=$((gcm clang).source -replace "clang.exe")" >> $env:GITHUB_ENV
-        if: matrix.os == 'windows-latest'
+        if: contains(matrix.os, 'windows')
 
       - name: Install ${{ matrix.rust }}
         uses: actions-rs/toolchain@v1
@@ -122,24 +120,15 @@ jobs:
           args: --workspace --doc --all-features --release
 
   no_std:
-    name: ${{ format('{0}Check [no_std] ({1}, {2})', matrix.experimental && '🦜 ' || '', matrix.rust, matrix.crates) }}
     needs: build-and-test
     runs-on: ubuntu-latest
-    continue-on-error: ${{ matrix.experimental }}
+    continue-on-error: ${{ (matrix.rust != 'stable') }}
     strategy:
       matrix:
-        rust: [stable]
+        rust: [stable, beta, nightly]
         crates: [
           "bee-ternary",
         ]
-        experimental: [false]
-        include:
-          - rust: beta
-            experimental: true
-            crates: "bee-ternary"
-          - rust: nightly
-            experimental: true
-            crates: "bee-ternary"
 
     steps:
       - uses: actions/checkout@v2
@@ -188,7 +177,6 @@ jobs:
           args: --release --target=riscv64gc-unknown-none-elf --manifest-path ${{ matrix.crates }}/Cargo.toml
 
   format:
-    name: Check Formatting
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -207,16 +195,11 @@ jobs:
 
   clippy:
     needs: format
-    name: ${{ format('{0}Clippy ({1})', matrix.experimental && '🦜 ' || '', matrix.rust) }}
     runs-on: ubuntu-latest
-    continue-on-error: ${{ matrix.experimental }}
+    continue-on-error: ${{ (matrix.rust != 'stable') }}
     strategy:
       matrix:
-        include:
-          - rust: stable
-            experimental: false
-          - rust: beta
-            experimental: true
+        rust: [stable, beta]
 
     steps:
       - uses: actions/checkout@v2
@@ -258,7 +241,6 @@ jobs:
           args: --all-targets --all-features -- -D warnings
 
   udeps:
-    name: Dependencies
     needs: clippy
     runs-on: ubuntu-latest
     steps:
@@ -305,7 +287,6 @@ jobs:
           args: --all-targets --all-features --backend=depinfo
 
   licenses:
-    name: Licenses
     needs: clippy
     runs-on: ubuntu-latest
     steps:
@@ -355,7 +336,6 @@ jobs:
           args: generate --workspace --all-features about.hbs
 
   docs:
-    name: Documentation
     needs: clippy
     runs-on: ubuntu-latest
     env:
@@ -391,7 +371,6 @@ jobs:
           args: --no-deps --document-private-items
 
   missing-files:
-    name: Missing Files
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
