--- a/bee-tangle/Cargo.toml
+++ b/bee-tangle/Cargo.toml
@@ -21,6 +21,7 @@ bitflags = { version = "1.2.1", default-features = false }
 futures = { version = "0.3.17", default-features = false }
 hashbrown = { version = "0.11.2", default-features = false, features = [ "raw", "ahash" ] }
 log = { version = "0.4.14", default-features = false }
+parking_lot = { version = "0.11.2", default-features = false, optional = true }
 rand = { version = "0.8.4", default-features = false, features = [ "std", "std_rng" ] }
 ref-cast = { version = "1.0.6", default-features = false }
 serde = { version = "1.0.130", default-features = false, features = [ "derive" ] }
