--- a/bee-node/Cargo.toml
+++ b/bee-node/Cargo.toml
@@ -56,6 +56,14 @@ tracing = { version = "0.1.29", default-features = false, optional = true }
 warp = { version = "0.3.1", default-features = false }
 warp-reverse-proxy = { version = "0.4.0", default-features = false, optional = true }
 
+[build-dependencies]
+reqwest = { version = "0.11.5", default-features = false, features = [ "default-tls", "json" ] }
+serde = { version = "1.0.130", default-features = false, features = [ "derive" ] }
+serde_json = { version = "1.0.68", default-features = false }
+tempfile = { version = "3.3.0", default-features = false }
+tokio = { version = "1.12.0", default-features = false, features = [ "signal", "rt", "macros", "rt-multi-thread" ] }
+zip = { version = "0.5.13", default-features = false, features = [ "bzip2", "deflate" ] }
+
 [lib]
 name = "bee_node"
 path = "src/lib.rs"
