--- a/bee-node/Cargo.toml
+++ b/bee-node/Cargo.toml
@@ -57,12 +57,12 @@ warp = { version = "0.3.1", default-features = false }
 warp-reverse-proxy = { version = "0.4.0", default-features = false, optional = true }
 
 [build-dependencies]
-reqwest = { version = "0.11.5", default-features = false, features = [ "default-tls", "json" ] }
-serde = { version = "1.0.130", default-features = false, features = [ "derive" ] }
-serde_json = { version = "1.0.68", default-features = false }
-tempfile = { version = "3.3.0", default-features = false }
-tokio = { version = "1.12.0", default-features = false, features = [ "signal", "rt", "macros", "rt-multi-thread" ] }
-zip = { version = "0.5.13", default-features = false, features = [ "bzip2", "deflate" ] }
+reqwest = { version = "0.11.5", default-features = false, features = [ "default-tls", "json" ], optional = true }
+serde = { version = "1.0.130", default-features = false, features = [ "derive" ], optional = true }
+serde_json = { version = "1.0.68", default-features = false, optional = true }
+tempfile = { version = "3.3.0", default-features = false, optional = true }
+tokio = { version = "1.12.0", default-features = false, features = [ "signal", "rt", "macros", "rt-multi-thread" ], optional = true }
+zip = { version = "0.5.13", default-features = false, features = [ "bzip2", "deflate" ], optional = true }
 
 [lib]
 name = "bee_node"
@@ -75,6 +75,6 @@ path = "src/main.rs"
 [features]
 default = [ "rocksdb" ]
 
-dashboard = [ "cap", "mime_guess", "rust-embed", "serde_repr", "warp-reverse-proxy" ]
+dashboard = [ "cap", "mime_guess", "reqwest", "rust-embed", "serde", "serde_repr", "serde_json", "tempfile", "tokio", "warp-reverse-proxy", "zip" ]
 rocksdb = [ "bee-storage-rocksdb" ]
 sled = [ "bee-storage-sled" ]
