Ignore changes to Docker

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,7 @@ on:
     paths-ignore:
       - 'documentation/**'
       - '**.md'
+      - 'bee-node/docker'
 
 concurrency: 
   group: ${{ github.workflow }}-${{ github.ref }}
