Fix build when FETCH_DASHBOARD does not exist

--- a/bee-node/docker/Dockerfile
+++ b/bee-node/docker/Dockerfile
@@ -20,7 +20,7 @@ COPY . .
 # The following is required for `git submodule` to work.
 COPY .git/ ./.git/
 
-RUN if [ "$WITH_DASHBOARD" = true ] ; then FETCH_DASHBOARD=1 cargo build --profile production --features dashboard --bin bee ; else cargo build --profile production --bin bee ; fi
+RUN if [ "$WITH_DASHBOARD" = true ] ; then cargo build --profile production --features dashboard --bin bee ; else cargo build --profile production --bin bee ; fi
 
 ############################
 # Image
