Roll back to sha2 crate, stream to hasher through std::io traits

--- a/bee-node/Cargo.toml
+++ b/bee-node/Cargo.toml
@@ -57,8 +57,8 @@ warp = { version = "0.3.1", default-features = false }
 warp-reverse-proxy = { version = "0.4.0", default-features = false, optional = true }
 
 [build-dependencies]
-checksums = { version = "0.9.1", default-features = false, optional = true }
 reqwest = { version = "0.11.5", default-features = false, features = [ "blocking", "default-tls", "json" ], optional = true }
+sha2 = { version = "0.9.6", default-features = false, optional = true }
 tempfile = { version = "3.3.0", default-features = false, optional = true }
 zip = { version = "0.5.13", default-features = false, features = [ "bzip2", "deflate" ], optional = true }
 
@@ -73,6 +73,6 @@ path = "src/main.rs"
 [features]
 default = [ "rocksdb" ]
 
-dashboard = [ "cap", "checksums", "mime_guess", "reqwest", "rust-embed", "serde_repr", "tempfile", "warp-reverse-proxy", "zip" ]
+dashboard = [ "cap", "mime_guess", "reqwest", "rust-embed", "serde_repr", "sha2", "tempfile", "warp-reverse-proxy", "zip" ]
 rocksdb = [ "bee-storage-rocksdb" ]
 sled = [ "bee-storage-sled" ]
