--- a/bee-node/Cargo.toml
+++ b/bee-node/Cargo.toml
@@ -56,6 +56,12 @@ tracing = { version = "0.1.29", default-features = false, optional = true }
 warp = { version = "0.3.1", default-features = false }
 warp-reverse-proxy = { version = "0.4.0", default-features = false, optional = true }
 
+[build-dependencies]
+reqwest = { version = "0.11.5", default-features = false, features = [ "blocking", "default-tls", "json" ], optional = true }
+sha2 = { version = "0.9.6", default-features = false, optional = true }
+tempfile = { version = "3.3.0", default-features = false, optional = true }
+zip = { version = "0.5.13", default-features = false, features = [ "bzip2", "deflate" ], optional = true }
+
 [lib]
 name = "bee_node"
 path = "src/lib.rs"
@@ -67,6 +73,6 @@ path = "src/main.rs"
 [features]
 default = [ "rocksdb" ]
 
-dashboard = [ "cap", "mime_guess", "rust-embed", "serde_repr", "warp-reverse-proxy" ]
+dashboard = [ "cap", "mime_guess", "reqwest", "rust-embed", "serde_repr", "sha2", "tempfile", "warp-reverse-proxy", "zip" ]
 rocksdb = [ "bee-storage-rocksdb" ]
 sled = [ "bee-storage-sled" ]
