--- a/bee-network/bee-autopeering/Cargo.toml
+++ b/bee-network/bee-autopeering/Cargo.toml
@@ -11,6 +11,8 @@ keywords = [ "iota", "bee", "framework", "network", "autopeering" ]
 homepage = "https://www.iota.org"
 
 [dependencies]
+bee-identity = { version = "0.1.0", path = "../../bee-identity", default-features = false }
+
 async-trait = { version = "0.1.51", default-features = false }
 base64 = { version = "0.13.0", default-features = false, features = [ "alloc" ] }
 bincode = { version = "1.3.3", default-features = false, optional = true }
