--- a/bee-protocol/Cargo.toml
+++ b/bee-protocol/Cargo.toml
@@ -14,6 +14,7 @@ homepage = "https://www.iota.org"
 bee-autopeering = { version = "0.5.0", path = "../bee-network/bee-autopeering", default-features = false }
 bee-common = { version = "0.6.0", path = "../bee-common/bee-common", default-features = false, optional = true }
 bee-gossip = { version = "0.6.0", path = "../bee-network/bee-gossip", default-features = false }
+bee-identity = { version = "0.1.0", path = "../bee-identity", default-features = false }
 bee-ledger = { version = "0.6.0", path = "../bee-ledger", default-features = false, features = [ "workers" ], optional = true }
 bee-message = { version = "0.1.6", path = "../bee-message", default-features = false, features = [ "serde" ] }
 bee-pow = { version = "0.2.0", path = "../bee-pow", default-features = false }
