Compile crates individually in CI
Add `alloc` to `serde`'s features

Set `-Dwarnings` and `RUST_BACKTRACE`

Add missing `time` feature to `bee-plugin-version-checker`

Add individual compilation/tests to `ci.yml`

Fix `unused` warnings in `bee-autopeering`

Build, test, doc test, individually

Convert more jobs

`udeps` false positives

--- a/bee-ledger/Cargo.toml
+++ b/bee-ledger/Cargo.toml
@@ -34,6 +34,10 @@ tokio = { version = "1.12.0", default-features = false, features = [ "sync", "fs
 tokio-stream = { version = "0.1.7", default-features = false, optional = true }
 url = { version = "2.2.2", default-features = false, optional = true }
 
+# `udeps` false positives
+[package.metadata.cargo-udeps.ignore]
+normal = [ "time-helper" ]
+
 [features]
 workers = [
   "bee-runtime",
