--- a/bee-message/Cargo.toml
+++ b/bee-message/Cargo.toml
@@ -21,7 +21,7 @@ digest = { version = "0.9.0", default-features = false }
 hex = { version = "0.4.3", default-features = false }
 iota-crypto = { version = "0.9.1", default-features = false, features = [ "ed25519", "blake2b" ] }
 iterator-sorted = { version = "0.1.0", default-features = false }
-serde = { version = "1.0.130", default-features = false, optional = true }
+serde = { version = "1.0.130", default-features = false, features = [ "alloc" ], optional = true }
 thiserror = { version = "1.0.30", default-features = false }
 
 [dev-dependencies]
