--- a/bee-storage/bee-storage-sled/Cargo.toml
+++ b/bee-storage/bee-storage-sled/Cargo.toml
@@ -18,7 +18,7 @@ bee-storage = { version = "0.9.0", path = "../bee-storage", default-features = f
 bee-tangle = { version = "0.2.0", path = "../../bee-tangle", default-features = false }
 
 num_cpus = { version = "1.13.0", default-features = false }
-serde = { version = "1.0.130", default-features = false, features = [ "derive" ] }
+serde = { version = "1.0.130", default-features = false, features = [ "std", "derive" ] }
 sled = { version = "0.34.7", default-features = false, features = [ "compression" ]}
 thiserror = "1.0.30"
 
