--- a/bee-node/bee-plugin/bee-plugin-version-checker/Cargo.toml
+++ b/bee-node/bee-plugin/bee-plugin-version-checker/Cargo.toml
@@ -20,5 +20,5 @@ reqwest = { version = "0.11.5", default-features = false, features = [ "json", "
 semver = { version = "1.0.4", default-features = false }
 serde = { version = "1.0.130", default-features = false, features = [ "derive" ] }
 serde_json = { version = "1.0.68", default-features = false }
-tokio = { version = "1.12.0", default-features = false, features = [ "signal", "rt", "macros", "rt-multi-thread" ] }
+tokio = { version = "1.12.0", default-features = false, features = [ "macros", "rt", "rt-multi-thread", "signal" ] }
 tokio-stream = { version = "0.1.7", default-features = false, features = [ "time" ] }
